# roomba_robot

roomba_bringup/launch/: roomba_530.launch  roomba_560.launch
roomba_description/: CMakeLists.txt  README.md  package.xml
roomba_description/launch/: create_empty_world.launch  create_mobile_base.launch  display.launch
roomba_description/urdf/: create.urdf.xacro  create_base.xacro  roomba.urdf.xacro  top_plate.urdf.xacro
roomba_driver/: CMakeLists.txt  package.xml
roomba_driver/src/: driver.py
